--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,2 +1,7 @@
+## process with automake to create Makefile.in
+##
+AM_CXXFLAGS=-Wall -Wextra -Wundef
+AM_CXXFLAGS+=-ggdb3
+#
 bin_PROGRAMS=emma
 emma_SOURCES=main.cpp read_file.cpp
