--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -152,6 +152,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
+AM_CXXFLAGS = -Wall -Wextra -Wundef -ggdb3
 emma_SOURCES = main.cpp read_file.cpp
 all: all-am
 
