--- a/configure.ac
+++ b/configure.ac
@@ -6,14 +6,18 @@ AC_PREREQ([2.68])
 # determine current version number, from hg rev #
 # if 'hg' exists, determine current tip revision
 #   otherwise, use 'UNK' as revision number
-define([LORNIX_VERSION],m4_esyscmd_s([hg tip --template "{rev}"]))
-define([LORNIX_VERSION],m4_default_nblank(LORNIX_VERSION,[UNK]))
-define([LORNIX_VERSION],m4_join([],[r],LORNIX_VERSION))
+define([LORNIX_VERSION],m4_esyscmd_s([cat VERSION]))
+define([LORNIX_REV],m4_esyscmd_s([hg tip --template "{rev}"]))
+define([LORNIX_REV],m4_default_nblank(LORNIX_REV,[UNK]))
+define([LORNIX_VERSION],m4_join([],LORNIX_VERSION,[-r],LORNIX_REV))
 #
 # now set the name, version and contact details
 AC_INIT([emma], LORNIX_VERSION, [lornix@lornix.com])
 #
-AM_INIT_AUTOMAKE([-Wall -Werror foreign dist-bzip2])
+AM_INIT_AUTOMAKE([-Wall -Werror foreign dist-bzip2 no-dist-gzip])
+#
+# are we in right place?
+AC_CONFIG_SRCDIR([src/Makefile.am])
 #
 # config header file
 AC_CONFIG_HEADERS([config.h])
@@ -25,15 +29,15 @@ AC_CONFIG_HEADERS([config.h])
 AC_PROG_CXX
 #
 # Checks for libraries.
-AC_CHECK_LIB([bfd], [bfd_init])
-AC_CHECK_LIB([opcodes], [disassembler_usage])
+AC_CHECK_LIB([bfd], [bfd_init],,
+             [AC_MSG_ERROR([Missing libbfd.*, binutils installed?])])
+AC_CHECK_LIB([opcodes], [disassembler_usage],,
+             [AC_MSG_ERROR([Missing libbfd.*, binutils installed?])])
 #
 # Checks for header files.
-AC_CHECK_HEADERS([bfd.h],
-                 [AC_DEFINE([HAVE_BFD_H],1)],
+AC_CHECK_HEADERS([bfd.h],,
                  [AC_MSG_ERROR([Missing bfd.h, binutils-dev installed?])])
-AC_CHECK_HEADERS([dis-asm.h],
-                 [AC_DEFINE([HAVE_DIS_ASM_H],1)],
+AC_CHECK_HEADERS([dis-asm.h],,
                  [AC_MSG_ERROR([Missing dis-asm.h, binutils-dev installed?])])
 #
 # Checks for typedefs, structures, and compiler characteristics.
