--- a/configure.ac
+++ b/configure.ac
@@ -6,10 +6,10 @@ AC_PREREQ([2.68])
 # determine current version number, from hg rev #
 # if 'hg' exists, determine current tip revision
 #   otherwise, use 'UNK' as revision number
-define([LORNIX_VERSION],m4_esyscmd_s([cat VERSION]))
+define([LORNIX_VER],m4_esyscmd_s([cat VERSION]))
 define([LORNIX_REV],m4_esyscmd_s([hg tip --template "{rev}"]))
 define([LORNIX_REV],m4_default_nblank(LORNIX_REV,[UNK]))
-define([LORNIX_VERSION],m4_join([],LORNIX_VERSION,[-r],LORNIX_REV))
+define([LORNIX_VERSION],m4_join([],LORNIX_VER,[-r],LORNIX_REV))
 #
 # now set the name, version and contact details
 AC_INIT([emma], LORNIX_VERSION, [lornix@lornix.com])
