--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,4 +4,4 @@ AM_CXXFLAGS=-Wall -Wextra -Wundef
 AM_CXXFLAGS+=-ggdb3
 #
 bin_PROGRAMS=emma
-emma_SOURCES=main.cpp read_file.cpp
+emma_SOURCES=main.cpp read_elf.cpp
