Testing random access of sections

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,8 @@
 ## process with automake to create Makefile.in
 ##
 AM_CXXFLAGS=-Wall -Wextra -Wundef
-AM_CXXFLAGS+=-ggdb3
+#AM_CXXFLAGS+=-ggdb3
+AM_CXXFLAGS+=-Werror
 #
 bin_PROGRAMS=emma
 emma_SOURCES=main.cpp read_elf.cpp
