--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -152,7 +152,8 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-AM_CXXFLAGS = -Wall -Wextra -Wundef -ggdb3
+#AM_CXXFLAGS+=-ggdb3
+AM_CXXFLAGS = -Wall -Wextra -Wundef -Werror
 emma_SOURCES = main.cpp read_elf.cpp
 all: all-am
 
