trying elf.h method to read file, readelf32 stubs in place

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -45,7 +45,8 @@ CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
-am_emma_OBJECTS = main.$(OBJEXT) read_elf.$(OBJEXT)
+am_emma_OBJECTS = main.$(OBJEXT) read_elf.$(OBJEXT) \
+	readelf32.$(OBJEXT)
 emma_OBJECTS = $(am_emma_OBJECTS)
 emma_LDADD = $(LDADD)
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
@@ -152,9 +153,8 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-#AM_CXXFLAGS+=-ggdb3
-AM_CXXFLAGS = -Wall -Wextra -Wundef -Werror
-emma_SOURCES = main.cpp read_elf.cpp
+AM_CXXFLAGS = -Wall -Wextra -Wundef -ggdb3 -Werror
+emma_SOURCES = main.cpp read_elf.cpp readelf32.cpp
 all: all-am
 
 .SUFFIXES:
@@ -238,6 +238,7 @@ distclean-compile:
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/main.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/read_elf.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/readelf32.Po@am__quote@
 
 .cpp.o:
 @am__fastdepCXX_TRUE@	$(CXXCOMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
