--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,8 +1,9 @@
 ## process with automake to create Makefile.in
 ##
 AM_CXXFLAGS=-Wall -Wextra -Wundef
-AM_CXXFLAGS+=-ggdb3
 AM_CXXFLAGS+=-Werror
+AM_CXXFLAGS+=-ggdb3
+AM_CXXFLAGS+=-O0
 #
 bin_PROGRAMS=emma
 emma_SOURCES=main.cpp read_elf.cpp readelf32.cpp
