whoops! didn't remove read_elf from Makefile.am

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,4 +6,4 @@ AM_CXXFLAGS+=-ggdb3
 AM_CXXFLAGS+=-O0
 #
 bin_PROGRAMS=emma
-emma_SOURCES=main.cpp read_elf.cpp readelf32.cpp
+emma_SOURCES=main.cpp readelf32.cpp
