--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -45,8 +45,7 @@ CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
-am_emma_OBJECTS = main.$(OBJEXT) read_elf.$(OBJEXT) \
-	readelf32.$(OBJEXT)
+am_emma_OBJECTS = main.$(OBJEXT) readelf32.$(OBJEXT)
 emma_OBJECTS = $(am_emma_OBJECTS)
 emma_LDADD = $(LDADD)
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
@@ -154,7 +153,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AM_CXXFLAGS = -Wall -Wextra -Wundef -Werror -ggdb3 -O0
-emma_SOURCES = main.cpp read_elf.cpp readelf32.cpp
+emma_SOURCES = main.cpp readelf32.cpp
 all: all-am
 
 .SUFFIXES:
@@ -237,7 +236,6 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/main.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/read_elf.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/readelf32.Po@am__quote@
 
 .cpp.o:
