--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,5 +5,6 @@ AM_CXXFLAGS+=-Werror
 AM_CXXFLAGS+=-ggdb3
 AM_CXXFLAGS+=-O0
 #
-bin_PROGRAMS=emma
+bin_PROGRAMS=emma hello_world_c
 emma_SOURCES=main.cpp readelf32.cpp
+hello_world_c_SOURCES=hello_world_c.c
