--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -45,7 +45,7 @@ CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
-am_emma_OBJECTS = main.$(OBJEXT) readelf32.$(OBJEXT)
+am_emma_OBJECTS = main.$(OBJEXT) readelf32.$(OBJEXT) utils.$(OBJEXT)
 emma_OBJECTS = $(am_emma_OBJECTS)
 emma_LDADD = $(LDADD)
 am_hello_world_c_OBJECTS = hello_world_c.$(OBJEXT)
@@ -160,7 +160,11 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AM_CXXFLAGS = -Wall -Wextra -Wundef -Werror -ggdb3 -O0
-emma_SOURCES = main.cpp readelf32.cpp
+#
+AM_CFLAGS = -Wall -Wextra -Wundef -Werror -ggdb3 -O0
+#
+emma_SOURCES = main.cpp readelf32.cpp utils.cpp
+#
 hello_world_c_SOURCES = hello_world_c.c
 all: all-am
 
@@ -249,6 +253,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/hello_world_c.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/main.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/readelf32.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/utils.Po@am__quote@
 
 .c.o:
 @am__fastdepCC_TRUE@	$(COMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
