--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -13,7 +13,7 @@ AM_CFLAGS+=-O0
 bin_PROGRAMS=
 #
 bin_PROGRAMS+=emma
-emma_SOURCES=main.cpp
+emma_SOURCES=main.cpp emma.h
 #
 # so I remember how to do this later
 # bin_PROGRAMS+=hello_world_c
