--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -12,8 +12,8 @@ AM_CFLAGS+=-O0
 #
 bin_PROGRAMS=
 #
-bin_PROGRAMS+=emma
-emma_SOURCES=main.cpp emma.h parsefile.h parsefile.cpp utils.h utils.cpp
+bin_PROGRAMS+=frida
+frida_SOURCES=main.cpp frida.h parsefile.h parsefile.cpp utils.h utils.cpp
 #
 # so I remember how to do this later
 # bin_PROGRAMS+=hello_world_c
